--- a/src/main/resources/liquibase/liquibase.properties
+++ b/src/main/resources/liquibase/liquibase.properties
@@ -1,9 +1,20 @@
-contexts: main
-changeLogFile: src/main/resources/liquibase/db.changelog-master.xml
-verbose: true
-dropFirst: false
+#contexts: main
+#changeLogFile: src/main/resources/liquibase/db.changelog-master.xml
+#verbose: true
+#dropFirst: false
+#
+#driver: com.mysql.jdbc.Driver
+#url: jdbc:mysql://localhost:3306/javaee_idea_keeper
+#username: Anna
+#password: anna2302
 
-driver: com.mysql.jdbc.Driver
-url: jdbc:mysql://localhost:3306/javaee_delivery-agency
-username: root
-password: root
+
+liquibase.change-log= src/main/resources/liquibase/db.changelog-master.xml
+#liquibase.check-change-log-location=true # check the change log location exists
+liquibase.contexts= main
+#liquibase.default-schema= # default database schema to use
+liquibase.drop-first=false
+liquibase.enabled=true
+liquibase.url= jdbc:mysql://localhost:3306/javaee_delivery-agency
+liquibase.user= Anna
+liquibase.password= anna2302
