--- a/src/main/resources/liquibase/liquibase.properties
+++ b/src/main/resources/liquibase/liquibase.properties
@@ -4,9 +4,9 @@ verbose: true
 dropFirst: false
 
 driver: com.mysql.jdbc.Driver
-url: jdbc:mysql://localhost:3306/javaee_idea_keeper
-username: Anna
-password: anna2302
+url: jdbc:mysql://localhost:3306/ideakeeper
+username: root
+password: root
 
 
 #liquibase.change-log= src/main/resources/liquibase/db.changelog-master.xml
