--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <artifactId>java3</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
     <packaging>war</packaging>
 
     <parent>
@@ -18,7 +17,6 @@
     </parent>
 
     <repositories>
-
         <repository>
             <id>mvn-public</id>
             <name>MVNRepository</name>
@@ -35,6 +33,7 @@
             <url>http://repo.spring.io/milestone</url>
         </repository>
     </repositories>
+
     <pluginRepositories>
         <pluginRepository>
             <id>spring-snapshots</id>
@@ -47,7 +46,6 @@
     </pluginRepositories>
 
     <properties>
-
         <commons-lang.version>2.6</commons-lang.version>
 
         <!-- HSQLDB dependency - used as embedded database -->
@@ -61,10 +59,22 @@
 
         <guava.version>18.0</guava.version>
 
+        <!-- Spring Boot -->
+        <spring-boot-starter-jersey.version>1.2.7.RELEASE</spring-boot-starter-jersey.version>
+        <spring-boot-starter-data-jpa.version>1.2.7.RELEASE</spring-boot-starter-data-jpa.version>
+
+        <jackson-core.version>2.6.3</jackson-core.version>
+        <jackson-databind.version>2.6.3</jackson-databind.version>
+        <jackson-annotations.version>2.6.3</jackson-annotations.version>
+
         <!-- Testing lib dependencies -->
         <junit.version>4.11</junit.version>
         <mockito-all.version>1.9.5</mockito-all.version>
+        <feign-core.version>8.12.1</feign-core.version>
+        <feign-jaxrs.version>8.12.1</feign-jaxrs.version>
+        <feign-jackson.version>8.12.1</feign-jackson.version>
 
+        <spring-boot-starter-test.version>1.2.7.RELEASE</spring-boot-starter-test.version>
     </properties>
 
     <dependencies>
@@ -102,6 +112,57 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>${spring-boot-starter-data-jpa.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jersey</artifactId>
+            <version>${spring-boot-starter-jersey.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson-core.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-databind.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson-annotations.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.netflix.feign</groupId>
+            <artifactId>feign-core</artifactId>
+            <version>${feign-core.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.netflix.feign</groupId>
+            <artifactId>feign-jackson</artifactId>
+            <version>${feign-jackson.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.netflix.feign</groupId>
+            <artifactId>feign-jaxrs</artifactId>
+            <version>${feign-jaxrs.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
@@ -117,26 +178,16 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring-boot-starter-test.version}</version>
         </dependency>
 
-        <dependency>
+        <!--dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+        </dependency-->
 
     </dependencies>
-
 
 
     <build>
@@ -176,7 +227,5 @@
 
         </plugins>
     </build>
-
-
 
 </project>
