--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,49 +1,49 @@
 #--------------------MYSQL PROPERTIES---------------------
 
-## DATASOURCE
-##spring.datasource.url=jdbc:hsqldb:mem:javaee_idea_keeper
-#spring.datasource.url=jdbc:mysql://localhost:3306/javaee_idea_keeper
-#spring.datasource.username=Anna
-#spring.datasource.password=anna2302
-#spring.datasource.initial-size=10
-#
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#
-#
-## JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=validate
-##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.HSQLDialect
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
-##spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
-#
-## LIQUIBASE (LiquibaseProperties)
-#liquibase.change-log=classpath:/liquibase/db.changelog-master.xml
-#liquibase.check-change-log-location=true
-#liquibase.drop-first=false
-#liquibase.enabled=false
-
-
-#--------------------LIQUIBASE PROPERTIES---------------------
-
 # DATASOURCE
-spring.datasource.url=jdbc:hsqldb:mem:javaee_idea_keeper
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.url=jdbc:hsqldb:mem:javaee_idea_keeper
+spring.datasource.url=jdbc:mysql://localhost:3306/javaee_idea_keeper
+spring.datasource.username=Anna
+spring.datasource.password=anna2302
 spring.datasource.initial-size=10
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.HSQLDialect
-spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.HSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
+#spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
 
 # LIQUIBASE (LiquibaseProperties)
 liquibase.change-log=classpath:/liquibase/db.changelog-master.xml
 liquibase.check-change-log-location=true
 liquibase.drop-first=false
-liquibase.enabled=true
+liquibase.enabled=false
+
+
+#--------------------LIQUIBASE PROPERTIES---------------------
+#
+## DATASOURCE
+#spring.datasource.url=jdbc:hsqldb:mem:javaee_idea_keeper
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.initial-size=10
+#
+## JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.HSQLDialect
+#spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
+#spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
+#
+## LIQUIBASE (LiquibaseProperties)
+#liquibase.change-log=classpath:/liquibase/db.changelog-master.xml
+#liquibase.check-change-log-location=true
+#liquibase.drop-first=false
+#liquibase.enabled=true
