--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,7 +40,7 @@ liquibase.enabled=false
 #spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
 #
 ## LIQUIBASE (LiquibaseProperties)
-#liquibase.change-log=classpath:/liquibase/db.changelog-master.xml
+#liquibase.change-log=classpath:/resources/liquibase/db.changelog-master.xml
 #liquibase.check-change-log-location=true
 #liquibase.drop-first=false
 #liquibase.enabled=true
