--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,5 @@
-#--------------------MYSQL PROPERTIES-----------------------
-
+##--------------------MYSQL PROPERTIES-----------------------
+#
 # DATASOURCE
 spring.datasource.url=jdbc:mysql://localhost:3306/javaee_idea_keeper
 spring.datasource.username=Anna
@@ -13,7 +13,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
+#spring.jpa.properties.hibernate.hbm2ddl.auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
 
