--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,13 @@
             <version>${spring-boot-starter-test.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.jayway.restassured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>1.4</version>
+            <scope>test</scope>
+        </dependency>
+
         <!--dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
