--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,8 +24,8 @@ liquibase.drop-first=false
 liquibase.enabled=false
 
 
-#--------------------LIQUIBASE PROPERTIES---------------------
-#
+##--------------------LIQUIBASE PROPERTIES---------------------
+##
 ## DATASOURCE
 #spring.datasource.url=jdbc:hsqldb:mem:javaee_idea_keeper
 #spring.datasource.username=sa
